--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ textarea:focus {
 
 #paperPlane {
     position: absolute;
-    right: 0;
+    right: 5%;
     top: 20%;
     transform: rotate(40deg);
     transition-duration: 3s;
@@ -196,6 +196,8 @@ textarea:focus {
 
 
 
+
+
 /* close button */
 
 .closeBtn {
@@ -279,6 +281,8 @@ textarea:focus {
 
 
 
+
+
 /* note animation */
 
 @keyframes my-animation {
@@ -296,6 +300,8 @@ textarea:focus {
     position: relative;
     animation: my-animation 2s ease;
 }
+
+
 
 
 
@@ -323,6 +329,8 @@ textarea:focus {
     transparent 75%,
     transparent)
 }
+
+
 
 
 
@@ -386,4 +394,33 @@ textarea:focus {
 
 .note_checked {
     visibility: hidden;
+}
+
+
+/* edit note */
+
+.editNote {
+    width: 100%;
+    height: 100px;
+    font-family: 'Indie Flower', cursive;
+    font-weight: bold;
+    background-color: rgba(0, 0, 0, 0.05);
+    font-size: 1.3rem;
+    border: none;
+    overflow-x: auto;
+    overflow-y: auto;
+    margin: 0;
+    color: #f44b42
+}
+
+#saveEditedText {
+    background-color: transparent;
+    border: 2px solid #f44b42;
+    font-family: 'Supermercado One', cursive;
+    color: #f44b42;
+}
+
+.lastModifiedSpan {
+    font-size: 0.5rem;
+    color: grey;
 }
